--- a/.config/i3/config
+++ b/.config/i3/config
@@ -168,7 +168,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
 # Print Screen
 bindsym Print exec scrot -e 'mv $f ~/Pictures/Screenshots'
 
-bindsym $mod+shift+x exec i3lock -i /home/marinos/Pictures/Wallpapers/lockscreen.png
+bindsym $mod+l exec i3lock -i /home/marinos/Pictures/Wallpapers/lockscreen.png
 
 exec --no-startup-id "pulseaudio --start"
 exec --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_shift_toggle"
