--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,7 @@
 set $mod Mod4
 
+new_window normal
+new_float normal
 
 font pango: Ubuntu 9
 hide_edge_borders both
@@ -109,8 +111,20 @@ bindsym $mod+Shift+0 move container to workspace $workspace10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+mode "(E)xit (L)ock, (R)eboot, (P)oweroff" {
+        bindsym $mod+r exec systemctl reboot
+        bindsym $mod+l exec i3lock -i ~/Pictures/Wallpapers/lockscreen.png
+        bindsym $mod+p exec systemctl poweroff
+	bindsym $mod+e exit
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+Shift+e mode "(E)xit (L)ock, (R)eboot, (P)oweroff"
+
+
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
