--- a/.i3config
+++ b/.i3config
@@ -2,7 +2,7 @@ set $mod Mod4
 font pango: Ubuntu 9
 new_window 1pixel
 new_float normal
-hide_edge_borders none
+hide_edge_borders both
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -54,16 +54,16 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: "
-set $ws4 "4: "
-set $ws5 "5: "
-set $ws6 "6: "
-set $ws7 "7: "
-set $ws8 "8: "
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
+set $ws5 "5: "
+set $ws6 "6: "
+set $ws7 "7: "
+set $ws8 "8: "
 set $ws9 "9: "
-set $ws10 "10: "
+set $ws10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -107,7 +107,7 @@ mode "(E)xit (L)ock, (R)eboot, (P)oweroff" {
 bindsym $mod+Shift+e mode "(E)xit (L)ock, (R)eboot, (P)oweroff"
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
+mode "" {
         # These bindings trigger as soon as you enter the resize mode
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -120,24 +120,23 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+r mode ""
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
   status_command    i3status
   tray_output       none
-  position          bottom
+  position          top
   workspace_buttons yes
-
   colors {
-    separator #666666
-    background #000000
-    statusline #f0f0f0
-    focused_workspace #888888 #e9e9e9 #222222
-    active_workspace #333333 #555555 #bbbbbb
-    inactive_workspace #333333 #181818 #bbbbbb
-    urgent_workspace #2f343a #900000 #ffffff
+    separator #969896
+    background #1d1f21
+    statusline #c5c8c6
+    focused_workspace #81a2be #81a2be #1d1f21
+    active_workspace #373b41 #373b41 #ffffff
+    inactive_workspace #282a2e #282a2e #969896
+    urgent_workspace #cc6666 #cc6666 #ffffff
   }
 }
 
@@ -165,7 +164,7 @@ exec xset s off
 exec xset b off
 exec udiskie
 
-client.focused #888888 #dddddd #222222 #2e9ef4
-client.focused_inactive #333333 #555555 #bbbbbb #484e50
-client.unfocused #333333 #333333 #888888 #292d2e
-client.urgent #2f343a #900000 #ffffff #900000
+client.focused #81a2be #81a2be #1d1f21 #282a2e
+client.focused_inactive #373b41 #373b41 #969896 #282a2e
+client.unfocused #282a2e #282a2e #969896 #282a2e
+client.urgent #373b41 #cc6666 #ffffff #cc6666
