--- a/.i3config
+++ b/.i3config
@@ -97,7 +97,7 @@ bindsym $mod+Shift+r restart
 
 mode "(E)xit (L)ock, (R)eboot, (P)oweroff" {
         bindsym $mod+r exec systemctl reboot
-        bindsym $mod+l exec i3lock -i /home/marinos/Pictures/Wallpapers/lockscreen.png
+        bindsym $mod+l exec i3lock -i ~/.config/i3/lockscreen.png
         bindsym $mod+p exec systemctl poweroff
         bindsym $mod+e exit
         # back to normal: Enter or Escape
@@ -126,7 +126,6 @@ bindsym $mod+r mode ""
 # finds out, if available)
 bar {
   status_command    i3status
-  tray_output       none
   position          top
   workspace_buttons yes
   colors {
@@ -148,21 +147,15 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -2% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
 
 # Print Screen
-bindsym Print exec scrot -e 'mv $f ~/Pictures/Screenshots'
+bindsym Print exec scrot -e 'mv $f ~/Pictures/Screenshots/'
 
-exec --no-startup-id "pulseaudio --start"
 exec --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_shift_toggle"
-exec --no-startup-id ~/.fehbg
-exec --no-startup-id "xrandr --setprovideroffloadsink nouveau Intel" 
-
-exec xset -dpms
-exec xset s off
-exec xset b off
-exec udiskie
+exec --no-startup-id hsetroot -solid "#1d1f21"
+exec --no-startup-id "compton -b"
 
 client.focused #81a2be #81a2be #1d1f21 #282a2e
 client.focused_inactive #373b41 #373b41 #969896 #282a2e
